--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
                 android:text="Smart watches"
 
                 android:textColor="@color/blue"
-                android:textSize="24sp">
+                android:textSize="20sp">
 
             </TextView>
 
@@ -99,7 +99,7 @@
                 android:layout_marginLeft="20dp"
                 android:fontFamily="@font/raleway_medium"
                 android:text="Casio"
-                android:textSize="24sp">
+                android:textSize="20sp">
 
             </TextView>
 
@@ -110,7 +110,7 @@
                 android:layout_margin="7dp"
                 android:fontFamily="@font/raleway_medium"
                 android:text="Seiko"
-                android:textSize="24sp">
+                android:textSize="20sp">
 
             </TextView>
 
@@ -120,7 +120,7 @@
                 android:layout_margin="7dp"
                 android:fontFamily="@font/raleway_medium"
                 android:text="Rolex"
-                android:textSize="24sp">
+                android:textSize="20sp">
 
             </TextView>
 
@@ -130,7 +130,7 @@
                 android:layout_margin="7dp"
                 android:fontFamily="@font/raleway_medium"
                 android:text="Tissot"
-                android:textSize="24sp">
+                android:textSize="20sp">
 
             </TextView>
 
@@ -139,26 +139,165 @@
 
     </HorizontalScrollView>
 
-    <RelativeLayout
-        android:layout_width="357dp"
-        android:layout_height="454dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/CardView1"
+        android:layout_width="157dp"
+        android:layout_height="213dp"
+        android:layout_marginStart="28dp"
+        app:cardCornerRadius="20dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="215dp"
-            android:orientation="horizontal">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </LinearLayout>
-    </RelativeLayout>
+            android:layout_height="match_parent">
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/imageAppleWatch"
+                android:layout_width="152dp"
+                android:layout_height="119dp"
+                android:background="@drawable/apple_watch_bg"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/apple"
+                tools:layout_editor_absoluteY="5dp"
+                tools:ignore="MissingConstraints">
+            </ImageView>
+
+            <TextView
+                android:id="@+id/textApple"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/raleway_semibold"
+                android:text="Apple Watch"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.275"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageAppleWatch" />
+
+            <TextView
+                android:id="@+id/textViewModel"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="4dp"
+                android:text="Series 7"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.134"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textApple">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/textViewprice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="$799"
+                android:textColor="@color/blue"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.132"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewModel" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="157dp"
+        android:layout_height="213dp"
+        android:layout_marginTop="52dp"
+        android:elevation="5dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/CardView1"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:id="@+id/imageGalaxyWatch"
+                android:layout_width="152dp"
+                android:layout_height="119dp"
+                android:background="@drawable/samsung_watch_bg"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/galaxy"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="5dp">
+
+            </ImageView>
+
+            <TextView
+                android:id="@+id/textGalaxy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/raleway_semibold"
+                android:text="Galaxy Watch"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.275"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageGalaxyWatch" />
+
+            <TextView
+                android:id="@+id/textViewModel2"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="4dp"
+                android:text="Series 4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.134"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textGalaxy">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/textViewprice2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="$599"
+                android:textColor="@color/blue"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.132"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewModel2" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
