--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -165,7 +165,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/apple"
                 tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="5dp"></ImageView>
+                tools:layout_editor_absoluteY="5dp">
+
+            </ImageView>
 
             <TextView
                 android:id="@+id/textApple"
