--- a/app/src/main/res/layout/activity_product_detail_apple.xml
+++ b/app/src/main/res/layout/activity_product_detail_apple.xml
@@ -95,8 +95,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="143dp"
+        android:layout_height="52dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
@@ -110,7 +110,7 @@
 
             android:layout_marginTop="8dp"
             android:background="#ffffff"
-            android:elevation="10dp"
+
             app:srcCompat="@drawable/circle_chalk_color" />
 
         <ImageButton
@@ -120,7 +120,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/product_color_selection_bg_bold"
-            android:elevation="10dp"
+
             app:srcCompat="@drawable/circle_nectriene_color" />
 
         <ImageButton
@@ -130,7 +130,6 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:background="#ffffff"
-            android:elevation="10dp"
             app:srcCompat="@drawable/circle_eucalyptus_color" />
     </LinearLayout>
 
@@ -186,6 +185,7 @@
         android:fontFamily="@font/raleway_bold"
         android:layout_marginStart="24dp"
         android:textSize="20sp"
+        android:elevation="10dp"
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6">
